src/components/UI/Navbar/Navbar.module.css
.navbar {
	z-index: 2;
	position: fixed;
	left: 50%;
	justify-content: center;
	width: 100vw;
	max-width: 2300px;
	height: 80px;
	margin-top: 12px;
	padding: 0px 80px 0px 80px;
	transform: translateX(-50%);
	font-size: 1.3em;
	font-family: var(--font-montserrat);
	text-shadow: 0px 0px 20px rgb(5, 0, 16, 0.7);
}

.navbar-content {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	height: 100%;

	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-webkit-touch-callout: none;
	-webkit-tap-highlight-color: transparent;
}

.navbar-logo-svg {
	display: flex;
	align-items: center;
	justify-content: center;
	width: auto;
	max-width: 200px;
	height: auto;
	margin-left: 20px;
}

.navbar-logo-text {
	display: flex;
	align-items: center;
	justify-content: center;
	width: auto;
	max-width: 200px;
	height: auto;
	margin-left: 20px;
	color: rgb(var(--logo-rgb));
	font-weight: 600;
	font-size: 2.5rem;
	font-family: var(--font-michroma);
	letter-spacing: 0.15rem;
	text-shadow: 0px 0px 18px rgba(var(--logo-rgb), 0.45),
		0px 0px 24px rgba(99, 50, 204, 0.3);
}

.navbar-link-container {
	display: flex;
	align-items: center;
	margin-right: 22px;
	padding: 15px 0px 15px 0px;
	gap: 12px;
	font-weight: 500;
}

/* Hamburger Menu Styles */
.hamburger {
	display: none;
	z-index: 10;
	flex-direction: column;
	justify-content: space-around;
	width: 30px;
	height: 24px;
	margin-right: 12px;
	cursor: pointer;
}

.hamburger-line {
	position: relative;
	width: 100%;
	height: 3px;
	border-radius: 2px;
	background: rgb(var(--logo-rgb));
	box-shadow: 0px 0px 8px rgba(var(--logo-rgb), 0.5);
}

.mobile-menu-overlay {
	position: fixed;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	backdrop-filter: blur(6px) !important;
	z-index: 5;
	position: fixed;
	transform: translateY(-5vh);
	top: 0;
	left: 0;
	width: 100vw;
	height: 110vh;
	padding-bottom: 10vh;
	background: rgba(var(--bg-dark-rgb), 0.3);
}

.mobile-menu {
	position: fixed;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: clamp(2rem, 4vh, 4rem);
	width: clamp(200px, 40vw, 400px);
	padding: 32px 128px;
	border-radius: 12px;
	backdrop-filter: blur(20px) !important;
	background: rgba(var(--bg-dark-rgb), 0.6);
	box-shadow: 0 0px 15px rgba(var(--bg-dark-rgb), 0.3),
		0 0 30px rgba(var(--bg-dark-rgb), 0.1);
}

.mobile-menu-link {
	display: block;
	font-family: var(--font-jura);
	font-weight: 500;
	font-size: 1.1em;
	text-align: center;
}

.mobile-menu-link:last-child {
	border-bottom: none;
}

@media (max-width: 1600px) {
	.navbar {
		height: 40px;
		padding: 10px 20px 0px 20px;
	}
}

@media (max-width: 1000px) {
	.navbar {
		padding: 0px 20px 0px 20px;
	}

	.navbar-logo-text {
		margin-left: 0px;
		transform: scale(0.8);
	}

	/* Hide desktop navbar */
	.navbar-link-container {
		display: none;
	}

	/* Show hamburger menu */
	.hamburger {
		display: flex;
	}
}

